--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -1,112 +1,186 @@
-*{
+* {
     padding: 0;
     margin: 0;
     outline: 0;
     font-family: 'Open Sans', sans-serif;
 }
+
 @media screen {
-  body{
-    min-width: 960px;
-  }
+    body {
+        min-width: 960px;
+    }
 }
+
 /* header and navigation styles */
 
-.text-primary{
-    color:rgb(231, 108, 8)
+.text-primary {
+    color: rgb(231, 108, 8)
 }
-.btn-primary{
-background-color: rgb(231, 108, 8);
-height: 64px;
-border-radius: 5px;
-color: #ffff;
-font-weight: 700;
-font-size: 20px;
-border: none;
-padding: 18px 35px;
+
+.btn-primary {
+    background-color: rgb(231, 108, 8);
+    height: 64px;
+    border-radius: 5px;
+    color: #ffff;
+    font-weight: 700;
+    font-size: 16px;
+    border: none;
+    text-wrap: nowrap;
+    padding: 18px 35px;
 }
-header{
+
+header {
     margin: 0;
     background-color: #fff8f3;
-    background-image: url('/images/header_bg.png'), url('../images/developer.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
     background-position: bottom right, left;
 
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
 
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-left: 50px;
     font-size: 20px;
 }
-nav ul{
+
+nav ul {
     margin: 50px 200px;
     display: flex;
     align-items: center;
 }
-.nav-title{
+
+.nav-title {
     font-weight: 800;
     font-size: 45px;
     margin: 50px 200px;
 }
 
 /* banner style */
-.banner{
+.banner {
     margin: 0 200px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner-sub-title{
-    font-size: 45px;
+
+.banner-content {
+    max-width: 400px;
+}
+
+.banner-sub-title {
+    font-size: 40px;
     font-weight: 600;
+    color: slategray;
 }
-.banner-title{
+
+.btn {
+    display: flex;
+
+}
+
+.btn .btn-primary {
+    margin-right: 16px;
+}
+
+.banner-title {
     font-weight: 700;
-    font-size: 85px;
+    font-size: 50px;
     margin-bottom: 20px;
 }
-.banner-description{
+
+.banner-description {
     color: #757575;
     margin-bottom: 20px;
 }
-.banner .profile-pic{
+
+.banner .profile-pic {
     width: 500px;
+    margin-left: 250px;
 }
 
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 
 }
-.about{
+
+.about {
     margin-top: 130px;
-    background:#fff8f3;
+    background: #fff8f3;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
 }
-.section-title{
 
+.section-title {
     margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
-.section-description{
+
+.section-description {
     color: #757575;
-    font-size:18px ;
+    font-size: 18px;
     margin-bottom: 30px;
 }
-.about-info{
+
+.about-info {
     display: flex;
     justify-content: space-around;
 }
-.info-title{
+
+.info-title {
     font-size: 20px;
 }
-.info-description{
+
+.info-description {
     font-weight: 700;
     font-size: 20px;
+}
+
+/* skill section */
+.skill-section {
+    margin-top: 30px;
+    border-radius: 10px;
+
+    text-align: center;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    background-color: rgb(222, 228, 235);
+   box-shadow: rgb(243, 255, 255);
+    text-align: center;
+    padding: 30px;
+    border-radius: 5px;
+}
+.skill>img{
+    overflow-clip-margin: content-box;
+    float: left;
+}
+ .skill-title{
+    text-align: start;
+   margin-top: 70px;
+   word-wrap: normal;
+   margin-bottom: 20px;
+   font-size: 20px;
+   font-weight: 700;
+}
+ .skill-description {
+    display: block;
+   text-align: start;
+   overflow: hidden;
+
+
 }
